--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "readme-roulette",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hamburg-js.github.io/roulette",
   "dependencies": {
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
