--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "lodash": "^4.17.14",
+    "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -35,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.136",
+    "@types/qrcode.react": "^0.8.2",
     "@types/styled-components": "^4.1.16",
     "gh-pages": "^2.0.1"
   }
